# osgPong

./: .gitignore  BACKLOG  Ball.cpp  Ball.hpp  CMakeLists.txt  Camera  Camera.cpp  FindNamedNode.cpp  FindNamedNode.hpp  GameController.cpp  GameController.hpp  Player.cpp  Player.hpp  PlayerScore.cpp  PlayerScore.hpp  PongGame  PongGame.cpp  PongGame.hpp  PongScore.cpp  PongScore.hpp  README.md  RealPlayer.cpp  RealPlayer.hpp  main.cpp
